--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,10 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
+  tests: './Forte.Tests/Forte.Tests.csproj'
 
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+- script: dotnet test $(tests)
+  displayName: 'dotnet test'
